...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addFloor" />

        <RadioGroup
            android:id="@+id/radioGroupCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/category"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="137dp">

            <RadioButton
                android:id="@+id/laminate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Laminate"
                android:textSize="25dp" />

            <RadioButton
                android:id="@+id/stone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroupCategory"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="602dp" />

        <RadioGroup
            android:id="@+id/radioGroupType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Regular laminate"
                android:textSize="25dp" />

            <RadioButton
                android:id="@+id/waterResistant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Water resistant"
                android:textSize="25dp" />

            <RadioButton
                android:id="@+id/waterProof"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroupSpecies"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="602dp" />

        <RadioGroup
            android:id="@+id/radioGroupColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Black"
                android:textSize="25dp" />

            <RadioButton
                android:id="@+id/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="White"
                android:textSize="25dp" />

            <RadioButton
                android:id="@+id/gray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroupColor"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="495dp" />

        <RadioGroup
            android:id="@+id/radioGroupBrand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Dream Home"
                android:textSize="25dp" />

            <RadioButton
                android:id="@+id/b2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Armstrong"
                android:textSize="25dp" />

            <RadioButton
                android:id="@+id/b3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteX="0dp"
            android:text="Price"
            android:textSize="35dp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/floor_size"
            />

        <TextView
            android:id="@+id/quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteX="0dp"
            android:text="Quantity"
            android:textSize="35dp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/floor_price" />

        <EditText
            android:id="@+id/floor_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/price" />

        <EditText
            android:id="@+id/floor_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginLeft="10dp"
            android:ems="5"
            android:hint="Quantity"
...
            android:text="Store ID"
            android:textSize="35dp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/floor_quantity" />

        <EditText
            android:id="@+id/store_ID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginLeft="10dp"
            android:ems="5"
            android:hint="Store ID"
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/storeID" />

        <Button
            android:id="@+id/addBtn"
            android:layout_width="101dp"
            android:layout_height="60dp"
            android:text="Add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/store_ID" />

    </androidx.constraintlayout.widget.ConstraintLayout>
...
