...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D2B48C"
    tools:context="edu.qc.seclass.fim.Admin">

    <TextView
        android:id="@+id/admin_logged_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:text="Admin Logged in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
...
        app:layout_constraintStart_toEndOf="@+id/searchBox"
        app:layout_constraintTop_toBottomOf="@+id/searchInstruction2"
        app:layout_constraintVertical_bias="0.0"
        tools:text="Search" />

    <Button
        android:id="@+id/button_add"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="250dp"
        android:layout_marginBottom="40dp"
...
